# G4Boilerplate

./: CMakeLists.txt  README  README.md  sim.cc
include/: ActionInitialization.hh  DetectorConstruction.hh  PhysicsList.hh  PrimaryGenerator.hh
macros/: init_vis.mac  vis.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  PhysicsList.cc  PrimaryGenerator.cc
